<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.bigamgamen</groupId>
	<artifactId>java.telegrambots</artifactId>
	<version>0.9-FINAL</version>

	<name>java.telegrambots</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<telegram.bot.version>5.4.0</telegram.bot.version>
		<microstream.version>08.01.01-MS-GA</microstream.version>
	</properties>

	<repositories>
		<repository>
			<id>microstream-releases</id>
			<url>https://repo.microstream.one/repository/maven-public/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.telegram</groupId>
			<artifactId>telegrambots</artifactId>
			<version>${telegram.bot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.telegram</groupId>
			<artifactId>telegrambots-abilities</artifactId>
			<version>${telegram.bot.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/one.microstream/microstream-storage-embedded -->
		<dependency>
			<groupId>one.microstream</groupId>
			<artifactId>microstream-storage-embedded</artifactId>
			<version>${microstream.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/one.microstream/microstream-storage-embedded-configuration -->
		<dependency>
			<groupId>one.microstream</groupId>
			<artifactId>microstream-storage-embedded-configuration</artifactId>
			<version>${microstream.version}</version>
		</dependency>
		<dependency>
			<groupId>one.microstream</groupId>
			<artifactId>microstream-persistence-binary-jdk17</artifactId>
			<version>${microstream.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.11</version>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>net.sourceforge.htmlunit</groupId> -->
		<!-- <artifactId>htmlunit</artifactId> -->
		<!-- <version>2.37.0</version> -->
		<!-- </dependency> -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.28.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.30</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.17.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.2</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<!-- Kopiert alle Libs einzeln in den Lib Ordner wie früher. -->

		<finalName>${project.name}</finalName>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>true</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>


</project>